# lunarwebsite

./: .gitignore  LICENSE  README.md
client/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
client/src/: config.js  config.jsx  index.css  index.jsx
client/src/components/: App.jsx  App.module.css  Navbar.jsx  Navbar.module.css
client/src/components/Account/: .Login.jsx.swp  Account.jsx  Forms.module.css  Login.jsx  Register.jsx
client/src/components/Home/: Home.jsx  Home.module.css
client/src/components/Shared/: App.module.css  Navbar.jsx  Navbar.module.css  TextInput.jsx
client/src/components/Test/: Test.jsx
server/: README.md  pyproject.toml
server/database/: db.sqlite3-shm  db.sqlite3-wal  note.txt
server/lunarwebsite/: .models.py.swp  __init__.py  account.py  accounts.py  database.py  models.py  ormsettings.py  utils.py
server/lunarwebsite/api/: account.py
server/migrations/models/: 0_20231006184520_init.sql  1_20231001205950_update.py
